Fixes navbar style on mobile

--- a/css/jawlaTracker.css
+++ b/css/jawlaTracker.css
@@ -3,7 +3,22 @@ body {
 }
 
 .navbar-nav {
-  margin-right: 1em; 
+  margin-right: 0.3em; 
+}
+
+.navbar-brand-container {
+  width: 35%;
+  white-space: nowrap;
+}
+
+.navbar-tools-container {
+  width: 65%;
+}
+
+.nav-btn {
+  color: #fff;
+  font-size: 120%;
+  margin-top: 7px;
 }
 
 .main-container {
